test/Transforms/InlineFreeFunctions/inline_free_functions_fail.llzk
// RUN: llzk-opt -split-input-file -llzk-inline-free-functions -verify-diagnostics %s

// Inlining a call cycle never converges (each round re-materializes the
// call), so recursion is rejected up front — whether or not anything calls
// the recursive function: the call inside its own body is itself a site
// the inliner would expand forever.

// Self-recursive.
module attributes {llzk.lang} {
  // expected-error@+1 {{cannot inline recursive free function}}
  function.def @rec(%x: !felt.type) -> !felt.type {
    %r = function.call @rec(%x) : (!felt.type) -> !felt.type
    function.return %r : !felt.type
  }
}

// -----

// Mutually recursive; the error lands on a function that is actually on the
// cycle, not merely calling into it.
module attributes {llzk.lang} {
  function.def @entry(%x: !felt.type) -> !felt.type {
    %r = function.call @ping(%x) : (!felt.type) -> !felt.type
    function.return %r : !felt.type
  }

  // expected-error@+1 {{cannot inline recursive free function}}
  function.def @ping(%x: !felt.type) -> !felt.type {
    %r = function.call @pong(%x) : (!felt.type) -> !felt.type
    function.return %r : !felt.type
  }

  function.def @pong(%x: !felt.type) -> !felt.type {
    %r = function.call @ping(%x) : (!felt.type) -> !felt.type
    function.return %r : !felt.type
  }
}

// -----

// The check covers the same scope the inliner acts on, including free
// functions in nested modules.
module attributes {llzk.lang} {
  module @lib {
    // expected-error@+1 {{cannot inline recursive free function}}
    function.def @loop(%x: !felt.type) -> !felt.type {
      %r = function.call @lib::@loop(%x) : (!felt.type) -> !felt.type
      function.return %r : !felt.type
    }
  }
}
